<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_gravity="top"
        android:background="@drawable/banner_main"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/talk_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/back_selector" />

        <TextView
            android:id="@+id/talk_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/talk"
            android:textColor="#FFF"
            android:textSize="15sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lvNews"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="132dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/list_item_suggest_bg"
        android:padding="4dp" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/foot_suggest"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_talk"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input"
            android:gravity="top"
            android:lines="4"
            android:maxLength="140"
            android:padding="4dp" >
        </EditText>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="4dp"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/num" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:background="@drawable/send_selector"
                android:text="@string/send" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>